# PCA-GM

./: pyproject.toml
gmn/: model.py
tests/: test_permutation_loss.py
torch_gm/PCA/: affinity_layer.py  gconv.py  model.py
torch_gm/gmn/: __init__.py  affinity_layer.py  displacement_layer.py  model.py  power_iteration.py
torch_gm/pca/: affinity_layer.py  gconv.py  model.py
torch_gm/sparse_torch/: __init__.py  csx_matrix.py
torch_gm/utils/: build_graphs.py  evaluation_metric.py  feature_align.py  fgm.py  hungarian.py  offset_loss.py  permutation_loss.py  sinkhorn.py  sparse.py  voting_layer.py
