[tool.poetry]
name = "gm-torch"
version = "0.1.0"
description = ""
authors = ["Kento Doi <doi.kento@weblab.t.u-tokyo.ac.jp>"]

[tool.poetry.dependencies]
python = "^3.6.5"
torch = "latest"
torchvision = "latest"
numpy = ""
pillow = ""
scipy = ""

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
